# boids-cpp

./: CMakeLists.txt  README.md
src/: Boid.cpp  Boid.h  Game.cpp  Game.h  Renderer.cpp  Renderer.h  main.cpp
src/config/: GameConfig.h
src/controller/: Game.cpp  Game.h
src/model/: Boid.cpp  Boid.h  QuadTree.cpp  QuadTree.h
src/renderer/: Renderer.cpp  Renderer.h
src/view/: Renderer.cpp  Renderer.h
